--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5134,6 +5134,10 @@ components:
               anyOf:
                 - type: string
                 - $ref: "#/components/schemas/Skjerming"
+            legacyFoelgsakenReferanse:
+              type: array
+              items:
+                type: string
           required:
             - journalaar
             - journalsekvensnummer
