Journalpost.saksmappe should be read-only

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5130,6 +5130,7 @@ components:
               anyOf:
                 - type: string
                 - $ref: "#/components/schemas/Saksmappe"
+              readOnly: true
             skjerming:
               anyOf:
                 - type: string
