Allow all korrespondanseparttypes for now

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5547,23 +5547,23 @@ components:
               maxLength: 20000
             korrespondanseparttype:
               type: string
-              enum:
-                [
-                  "avsender",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/avsender",
-                  "mottaker",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/mottaker",
-                  "kopimottaker",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/kopimottaker",
-                  "gruppemottaker",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/gruppemottaker",
-                  "intern_avsender",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/intern_avsender",
-                  "intern_mottaker",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/intern_mottaker",
-                  "intern_kopimottaker",
-                  "http://www.arkivverket.no/standarder/noark5/arkivstruktur/intern_kopimottaker",
-                ]
+              # enum:
+              #   [
+              #     "avsender",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/avsender",
+              #     "mottaker",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/mottaker",
+              #     "kopimottaker",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/kopimottaker",
+              #     "gruppemottaker",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/gruppemottaker",
+              #     "intern_avsender",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/intern_avsender",
+              #     "intern_mottaker",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/intern_mottaker",
+              #     "intern_kopimottaker",
+              #     "http://www.arkivverket.no/standarder/noark5/arkivstruktur/intern_kopimottaker",
+              #   ]
             saksbehandler:
               type: string
             epostadresse:
