--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5945,6 +5945,7 @@ components:
               anyOf:
                 - type: string
                 - $ref: "#/components/schemas/Bruker"
+              readOnly: true # Insert-endpoints are under /bruker/{...}
             navn:
               type: string
             spoerring:
@@ -5968,6 +5969,7 @@ components:
               anyOf:
                 - type: string
                 - $ref: "#/components/schemas/Bruker"
+              readOnly: true # Insert-endpoints are under /bruker/{...}
             saksmappe:
               anyOf:
                 - type: string
@@ -5979,8 +5981,6 @@ components:
             abonnere:
               type: boolean
               default: false
-          required:
-            - bruker
 
     Tilbakemelding:
       type: object
