LagretSoek.label is required

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5953,6 +5953,8 @@ components:
             abonnere:
               type: boolean
               default: false
+          required:
+            - navn
 
     LagretSak:
       type: object
