LagretSoek.legacyQuery is required (for now)

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5955,6 +5955,7 @@ components:
               type: string
           required:
             - label
+            - legacyQuery
 
     LagretSak:
       type: object
