Add "email" to innsynskravDel

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -5732,6 +5732,10 @@ components:
                 - type: string
                 - $ref: "#/components/schemas/Enhet"
               readOnly: true
+            email:
+              type: string
+              format: email
+              readOnly: true
             sent:
               type: string
               format: date-time
