Put -> Patch in operationIds

--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -96,7 +96,7 @@ paths:
       description: Update a single Arkiv.
       tags:
         - Arkiv
-      operationId: PutArkiv
+      operationId: PatchArkiv
       parameters:
         - name: arkivId
           in: path
@@ -444,7 +444,7 @@ paths:
       description: Update a single Arkivdel.
       tags:
         - Arkivdel
-      operationId: PutArkivdel
+      operationId: PatchArkivdel
       parameters:
         - name: arkivdelId
           in: path
@@ -792,7 +792,7 @@ paths:
       description: Update a single Behandlingsprotokoll.
       tags:
         - Behandlingsprotokoll
-      operationId: PutBehandlingsprotokoll
+      operationId: PatchBehandlingsprotokoll
       parameters:
         - name: behandlingsprotokollId
           in: path
@@ -887,7 +887,7 @@ paths:
       description: Update a single Dokumentobjekt.
       tags:
         - Dokumentobjekt
-      operationId: PutDokumentobjekt
+      operationId: PatchDokumentobjekt
       parameters:
         - name: dokumentobjektId
           in: path
@@ -982,7 +982,7 @@ paths:
       description: Update a single Identifikator.
       tags:
         - Identifikator
-      operationId: PutIdentifikator
+      operationId: PatchIdentifikator
       parameters:
         - name: identifikatorId
           in: path
@@ -1094,7 +1094,7 @@ paths:
       description: Update a Innsynskrav.
       tags:
         - Innsynskrav
-      operationId: PutInnsynskrav
+      operationId: PatchInnsynskrav
       parameters:
         - name: innsynskravId
           in: path
@@ -1306,7 +1306,7 @@ paths:
       description: Update a single Klasse.
       tags:
         - Klasse
-      operationId: PutKlasse
+      operationId: PatchKlasse
       parameters:
         - name: klasseId
           in: path
@@ -1591,7 +1591,7 @@ paths:
       description: Update a single Klassifikasjonssystem.
       tags:
         - Klassifikasjonssystem
-      operationId: PutKlassifikasjonssystem
+      operationId: PatchKlassifikasjonssystem
       parameters:
         - name: klassifikasjonssystemId
           in: path
@@ -1749,7 +1749,7 @@ paths:
       description: Update a single Korrespondansepart.
       tags:
         - Korrespondansepart
-      operationId: PutKorrespondansepart
+      operationId: PatchKorrespondansepart
       parameters:
         - name: korrespondansepartId
           in: path
@@ -1849,7 +1849,7 @@ paths:
       description: Update a single LagretSak.
       tags:
         - LagretSak
-      operationId: PutLagretSak
+      operationId: PatchLagretSak
       parameters:
         - name: lagretSakId
           in: path
@@ -1949,7 +1949,7 @@ paths:
       description: Update a single LagretSoek.
       tags:
         - LagretSoek
-      operationId: PutLagretSoek
+      operationId: PatchLagretSoek
       parameters:
         - name: lagretSoekId
           in: path
@@ -2044,7 +2044,7 @@ paths:
       description: Update a single Moetedeltaker.
       tags:
         - Moetedeltaker
-      operationId: PutMoetedeltaker
+      operationId: PatchMoetedeltaker
       parameters:
         - name: moetedeltakerId
           in: path
@@ -2139,7 +2139,7 @@ paths:
       description: Update a single Moetedokument.
       tags:
         - Moetedokument
-      operationId: PutMoetedokument
+      operationId: PatchMoetedokument
       parameters:
         - name: moetedokumentId
           in: path
@@ -2316,7 +2316,7 @@ paths:
       description: Update a single Moetesak.
       tags:
         - Moetesak
-      operationId: PutMoetesak
+      operationId: PatchMoetesak
       parameters:
         - name: moetesakId
           in: path
@@ -2476,7 +2476,7 @@ paths:
       description: Update a single Moetesaksbeskrivelse.
       tags:
         - Moetesaksbeskrivelse
-      operationId: PutMoetesaksbeskrivelse
+      operationId: PatchMoetesaksbeskrivelse
       parameters:
         - name: moetesaksbeskrivelseId
           in: path
@@ -2588,7 +2588,7 @@ paths:
       description: Update a single Skjerming.
       tags:
         - Skjerming
-      operationId: PutSkjerming
+      operationId: PatchSkjerming
       parameters:
         - name: skjermingId
           in: path
@@ -2683,7 +2683,7 @@ paths:
       description: Update a single Utredning.
       tags:
         - Utredning
-      operationId: PutUtredning
+      operationId: PatchUtredning
       parameters:
         - name: utredningId
           in: path
@@ -2868,7 +2868,7 @@ paths:
       description: Update a single Vedtak.
       tags:
         - Vedtak
-      operationId: PutVedtak
+      operationId: PatchVedtak
       parameters:
         - name: vedtakId
           in: path
@@ -3053,7 +3053,7 @@ paths:
       description: Update a single Votering.
       tags:
         - Votering
-      operationId: PutVotering
+      operationId: PatchVotering
       parameters:
         - name: voteringId
           in: path
@@ -3152,7 +3152,7 @@ paths:
       description: Update a single Enhet.
       tags:
         - Enhet
-      operationId: PutEnhet
+      operationId: PatchEnhet
       parameters:
         - name: enhetId
           in: path
@@ -3444,7 +3444,7 @@ paths:
       description: Update a record
       tags:
         - Journalpost
-      operationId: PutJournalpost
+      operationId: PatchJournalpost
       parameters:
         - name: journalpostId
           in: path
@@ -3692,7 +3692,7 @@ paths:
       description: Update a document
       tags:
         - Dokumentbeskrivelse
-      operationId: PutDokumentbeskrivelse
+      operationId: PatchDokumentbeskrivelse
       parameters:
         - name: dokumentbeskrivelseId
           in: path
@@ -3820,7 +3820,7 @@ paths:
       description: Update a Saksmappe.
       tags:
         - Saksmappe
-      operationId: PutSaksmappe
+      operationId: PatchSaksmappe
       parameters:
         - name: saksmappeId
           in: path
@@ -3978,7 +3978,7 @@ paths:
       description: Update a Moetemappe.
       tags:
         - Moetemappe
-      operationId: PutMoetemappe
+      operationId: PatchMoetemappe
       parameters:
         - name: moetemappeId
           in: path
@@ -4215,7 +4215,7 @@ paths:
       description: Update a single Bruker.
       tags:
         - Bruker
-      operationId: PutBruker
+      operationId: PatchBruker
       parameters:
         - name: brukerId
           in: path
@@ -4492,7 +4492,7 @@ paths:
       description: Update password for a Bruker.
       tags:
         - Bruker
-      operationId: PutBrukerPassword
+      operationId: PostBrukerPassword
       parameters:
         - name: brukerId
           in: path
@@ -4524,7 +4524,7 @@ paths:
       description: Update password for a Bruker.
       tags:
         - Bruker
-      operationId: PutBrukerPasswordWithSecret
+      operationId: PostBrukerPasswordWithSecret
       parameters:
         - name: brukerId
           in: path
@@ -4648,7 +4648,7 @@ paths:
       description: Update a single Tilbakemelding.
       tags:
         - Tilbakemelding
-      operationId: PutTilbakemelding
+      operationId: PatchTilbakemelding
       parameters:
         - name: tilbakemeldingId
           in: path
@@ -4837,7 +4837,7 @@ paths:
       description: Update a single ApiKey.
       tags:
         - ApiKey
-      operationId: PutApiKey
+      operationId: PatchApiKey
       parameters:
         - name: apiKeyId
           in: path
